--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Create a todo app with a `React` frontend and a `Node + Typescript` backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server",
+    "build": "webpack --watch --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/kevincerda/todo-typescript#readme",
   "dependencies": {
+    "babel-loader": "^8.0.4",
     "express": "^4.16.4",
     "nodemon": "^1.18.9",
     "react": "^16.7.0",
